add code for getting guess

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </form>
             </section>
             <section id="game-state">
+                <button id="new-game" onclick="startNewGame()">New Game</button>
                 <p id="guess-state">
                     <span>_</span><span>_</span><span>_</span><span>_</span><span>_</span><span>_</span><span>_</span>
                 </p>
