--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     _________
                 </p>
                 <p >
-                    Not in word:   <span id="uncontained-letters">befgt</span>                    
+                    Letters not in word:   <span id="uncontained-letters">befgt</span>                    
                 </p>
                 <p >
-                    You have <strong id="tries-left">6</strong> tries left
+                    You have <strong id="tries-left">0</strong> tries left
                 </p>
                 <p id="communication">
                     Nope! Bad luck.
