--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h2>Give it your best shot!</h2>
                     <label for="guess-input">
                         Enter guess
-                        <input id="guess-input" name="guess-input" type="text">
+                        <input id="guess-input" name="guess-input" type="text" onclick="ClearCommunication()" oninput="ClearCommunication()" autocomplete="off">
                     </label>
                     <input id="submit" type="submit" value="Try it !">
                 </form>
@@ -28,13 +28,13 @@
                     _________
                 </p>
                 <p >
-                    Letters not in word:   <span id="uncontained-letters">befgt</span>                    
+                    Letters not in word:   <span id="uncontained-letters"></span>                    
                 </p>
                 <p >
-                    You have <strong id="tries-left">0</strong> tries left
+                    You have <strong id="tries-left">6</strong> tries left
                 </p>
                 <p id="communication">
-                    Nope! Bad luck.
+                    
                 </p>
             </section>
         </article>
