--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/main.css">
-        <script type="text/javascript" src="./js/hangman-game-v2.js" defer></script>
+        <script type="text/javascript" src="./js/hangman-game.js" defer></script>
     </head>
     <body>
         <h1 id="my-heading">Hangman Game Exercise</h1>
@@ -16,7 +16,7 @@
                 <form id="guess-form" action="#" method="GET">
                     <h2>Give it your best shot!</h2>
                     <label for="guess-input">
-                        Enter guess
+                        Enter guess (letter or full word)
                         <input id="guess-input" name="guess-input" type="text" onclick="ClearCommunication()" oninput="ClearCommunication()" autocomplete="off">
                     </label>
                     <input id="submit" type="submit" value="Try it !">
@@ -25,16 +25,16 @@
             <section id="game-state">
                 <button id="new-game" onclick="startNewGame()">New Game</button>
                 <p id="guess-state">
-                    _________
+                
                 </p>
                 <p >
                     Letters not in word:<span id="uncontained-letters"></span>                    
                 </p>
                 <p >
-                    You have <strong id="tries-left">6</strong> tries left
+                    You have <strong id="tries-left">0</strong> tries left
                 </p>
                 <p id="communication">
-                    
+                    Press New Game button to start game.
                 </p>
             </section>
         </article>
