--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/main.css">
-        <script type="text/javascript" src="./js/hangman-game.js" defer></script>
+        <script type="text/javascript" src="./js/scripts.js" defer></script>
     </head>
     <body>
         <h1 id="my-heading">Hangman Game Exercise</h1>
