final working version

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <head>
         <title>
-            Hangman-game Exercise
+            Hangman-game in Typescript
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/main.css">
         <script type="text/javascript" src="./main.js" defer></script>
     </head>
     <body>
-        <h1 id="my-heading">Hangman Game Exercise</h1>
+        <h1 id="my-heading">Hangman Game in TypeScript</h1>
         <article>
             <section>
                 <form id="guess-form" action="#" method="GET">
